Fixing no text visible on the grid due to font-size:0

--- a/vertical-grid.less
+++ b/vertical-grid.less
@@ -18,6 +18,7 @@
   box-sizing:border-box;
   position: relative;
   padding:0 0;
+  font-size:medium;
 }
 
 .mixin-grid-col(@num, @gutter_pc, @padding, @num_columns) {
